--- a/Rouke_Broersma.mw
+++ b/Rouke_Broersma.mw
@@ -36,7 +36,7 @@ Sinds 1975 woont e in [[Bunne]].
 *''Kerndoelen Moluks Maleis voor basisschool en basisvorming'' (mit Xaf Lasomer, 1994)
 *''Werken aan woorden 2. Een project woordenschatuitbreiding geschiedenis'' (mit Magdaleen Kingmans, 1994)
 *''Werken aan woorden 3. Een project woordenschatuitbreiding biologie: katern BO en basisvorming'' (mit Magdaleen Kingmans, 1994)
-*''De Eekhorst, een eigen wijs portret (mit Jimke Nicolai en Freek Velthausz, 2002)
+*''De Eekhorst, een eigen wijs portret'' (mit Jimke Nicolai en Freek Velthausz, 2002)
 *''Levend lezen dat’s de kunst. Ideeën en technieken voor vernieuwend leesonderwijs'' (Jimke Nicolai en Jeroen Tans, 2003)
 *''Geef ze de ruimte. Naar een inspirerende leer-, werk- en speelomgeving in de basisschool'' (mit Klaas Mulder, Jimke Nicolai en Jeroen Tans, 2004)
 *''Dat’s andere taal. Bouwstenen voor levend taalonderwijs'' (mit tekstbijdragen van aandern, 2005)
@@ -54,7 +54,8 @@ Sinds 1975 woont e in [[Bunne]].
 
 {{Dia|Dit stok is eschreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
-[[Kategorie:Drèents artikel|Broersma, Rouke]]
-[[Kategorie:Nederlaandse schriever|Broersma, Rouke]]
-[[Kategorie:Literatuur|Broersma, Rouke]]
-[[Kategorie:Nedersaksiese schrieveri'je|Broersma, Rouke]]
+{{DEFAULTSORT:Broersma, Rouke}}
+[[Kategorie:Drèents artikel]]
+[[Kategorie:Nederlaandse schriever]]
+[[Kategorie:Literatuur]]
+[[Kategorie:Nedersaksiese schrieveri'je]]
