*Empty MediaWiki Message*

--- a/Herman_Finkers.mw
+++ b/Herman_Finkers.mw
@@ -67,7 +67,7 @@ In [[2014]] wör dr in theater [[Hof 88]] in Almelo ne zaal noar um neumd.
 *Het Meisje van de Slijterij (''t Meaken van de Slieterieje'')
 *De zon gaat zinloos onder, morgen moet zij toch weer op (''De zunne geet zinloos oonder, morn möt ze toch wier op'')
 *Carnaval der Dieren / Sint Joris Mis (''Karnaval van de Deers/Seent Joaris Mis'')
-*Kroamschudd'n in Mariaparochie / Macbeth (''Kroamschudn in Mariaparochie/Macbeth: twee animoasiefilms)
+*Kroamschudd'n in Mariaparochie / Macbeth (''Kroamschudn in Mariaparochie/Macbeth'': twee animoasiefilms)
 *Dat heeft zo'n jongen toch niet nodig (''Dat hef zon jong toch nich neudig'')
 *Geen spatader veranderd (''Gen spatoare aans'')
 *Kalm aan en rap een beetje (''Heandig an en rap wat'')
