--- a/Karl_Sauvagerd.mw
+++ b/Karl_Sauvagerd.mw
@@ -6,10 +6,10 @@ In 1910 verhuusden zien volk hen Wilsum, daoras Sauvagerd op de Volksschule gunk
 ==Schrieveri'je==
 Ien van Sauvagerd zien onderwarpen in de schrieveri'je is 'Heergods Natuur', die nog hier en daor in de Graofschop Benthem niet an-emeuken is töt maot en weide. Hi'j röp op töt behold daorvan:
 
-:''laot hier en door een heukien vrij,
-:''een streepien ven, een stukkien heide, 
-:''dat hier en door een steegien blief
-:''zo, as 't oens de Heergod gif
+:''laot hier en door een heukien vrij,''
+:''een streepien ven, een stukkien heide, ''
+:''dat hier en door een steegien blief''
+:''zo, as 't oens de Heergod gif''
 
 Uut ''Heergods Natuur'', ummezet in de [[West-Oaveriesselse spelling]]
 
@@ -18,21 +18,21 @@ In 1948 verscheen van hum ''Häideblomen : Gedichten en Geschichten ut de Groafs
 Partie gedichten van Sauvagerd stunden in de jaoren vieftig in 't in [[Grunnen (provìnzie)|Grunning]] uutegèven literaire tiedschrift ''[['t Swieniegeltje]]''. Hi'j schreef ok in tiedschriften as ''[[Moderspråke en Nåberschůp]]'' en ''Der Grafschafter''. Veur dit leste blad schreef hi'j van 1968 töt 1974 de riege ''Unser Grafschafter Platt''. Sauvagerd is vertègenwoordigd in de bundel ''Heimatdichtung der Grafschaft Bentheim'' (1973), onder redactie van Wilhelm Buddenberg en Hermann Heddendorp.
 
 ==Anhaling==
-:''Dåår lig
-:''he nů vöör mij
-:''ůp miene tåfel. — Jå,
-:''wat is 't? Nen steen?
-:''Gesmůlten ieser? Of kan 't nog
-:''wat anders ween? Nich groot — as
-:''miene vůůst, — men swåår, heel swåår,
-:''brůůn, as of 't klei was, men met
-:''gries metallen good döörsmůlten
-:''liekt et wal wat
-:''bůtengewoons. Dåår
-:''lig he nů
-:''en prååt.
+:''Dåår lig''
+:''he nů vöör mij''
+:''ůp miene tåfel. — Jå,''
+:''wat is 't? Nen steen?''
+:''Gesmůlten ieser? Of kan 't nog''
+:''wat anders ween? Nich groot — as''
+:''miene vůůst, — men swåår, heel swåår,''
+:''brůůn, as of 't klei was, men met''
+:''gries metallen good döörsmůlten''
+:''liekt et wal wat''
+:''bůtengewoons. Dåår''
+:''lig he nů''
+:''en prååt.''
 
-:''[...]
+:''[...]''
 
 Uut Sauvagerd zien gedicht ''Meteoor'' (in '' 't Swieniegeltje'', darde jaorgaank - eschreven in de [[Vosbergenschriefwiese]])
 
