*Empty MediaWiki Message*

--- a/Sarkasme.mw
+++ b/Sarkasme.mw
@@ -28,6 +28,8 @@ In meyrere kulturen rund de wearld wördt sarkasme neet waerdeerd of selvs begre
 ==Skreaven sarkasme==
 Ouk in skreavene stükke kan de sarkastiske bedoling misverstån worden, ümdat dårin den toun van den skryver neet te höyren is. Der is noch altyd gin algemeyn annöämene wyse üm in en stükke tekst düdelik te maken dat et sarkastisk bedoold was. Seyd de uutvinding van de bookdrükkerye is verskeidene målen en horisontaal ümmedraid vrågteyken vöäresteld (⸮), mär dat haalden nooit an. Up internet wördt mangs de [[XML]]-tag <nowiki></sarcasm></nowiki> gebruked, mangs ouk ofkörted töt ''/sarcasm'' of selvs ''/s''. Meysttyds wördt dit pas nå et sarkastisk bedoolde stükke tekst esat, sou dat de grap an et ende kümt.
 
+<references/>
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Literatuur]]
 [[Kategorie: Stylfiguur]]
