--- a/14_april.mw
+++ b/14_april.mw
@@ -12,7 +12,8 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''14 april'''
 * [[1527]] - [[Abraham Ortelius]], kaortenmaker en geograaf († [[1598]]).
 * [[1629]] - [[Christiaan Huygens]], [[Nederlaand|Nederlaanse]] sternskundige, wiskundige en netuurkundige († [[1695]]). 
 * [[1977]] - [[Sarah Michelle Gellar]], actrice.
-*1998 - Heden, Frank van Maanen. Brabantse levensgenieter.
+*1998 - Heden, Frank van Maanen. Brabantse jongenshoer.[https://nl.wiktionary.org/wiki/jongenshoer]
+
 
 == Uut de tied ==
 * [[1759]] - [[Georg Friedrich Händel]], [[Duutslaand|Duutse]]/[[Engelaand (olde könninkriek)|Engelse]] kompenis en diregent (geboren [[1685]]).
