--- a/Achterhookse_warkwoorden.mw
+++ b/Achterhookse_warkwoorden.mw
@@ -300,10 +300,10 @@ Hier volgt ne lieste van onregelmaotige [[Achterhooks]]e warkwoorden.
 |-
 |}
 
-''N.B.: 
+''N.B.:''
 
-* "Hoe laat moeten we daar zijn?" wordt vertaald as: "Hoe late mot wi-j daor waen?
-* "Het moet heel mooi zijn geweest" wordt vertaald as: "Ut mot heel (of alderbastend) mooi  ewest waen.''
+* "Hoe laat moeten we daar zijn?" wordt vertaald as: "Hoe late mot wi-j daor waen?"
+* "Het moet heel mooi zijn geweest" wordt vertaald as: "Ut mot heel (of alderbastend) mooi ewest waen."
 
 ==Lopen==
 :ik lepe
