Betere omschrijving toegevoegd

--- a/Laorne.mw
+++ b/Laorne.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Dikke boom.jpg|thumb|250px|thicc boi boom in Laorne]]
+[[Bestaand:Dikke boom.jpg|thumb|250px|hele dikke boom in Laorne]]
 '''Laorne''' ([[Nederlaands|Nederlands]]: ''Laren'') is n dörp in de [[Achterhook]]se gemeente [[Lochem]] in t oosten van [[Gelderlaand|Gelderland]], t dörp had op [[1 jannewoari]] [[2006]] ongeveer 4.000 inwoners. Töt [[1971]] was Laorne n zelfstandige gemeente, waortoo ok t dörp [[Barchem]] beheurde. Laorne wordt al vanof [[1294]]/[[1295]] in dokumenten enömd.
 
 ==Bekende leu oet Laorne==
