*Empty MediaWiki Message*

--- a/Balder.mw
+++ b/Balder.mw
@@ -4,9 +4,9 @@ Van Balder sint weinig verhalen bekend, behalve dat hee en syn moder Frigg beide
 
 Balders moder Frigg krigt sou vöäle skrik van de vöärspelling dat se alle leavende weasens in et land löt beloaven dat se Balder niks sölt doon. Se vergeat enkel de misteltak te vrågen, want den acht see neet belangryk genog. Dår krigt stoakegud [[Loki]] lucht van en den maket sik ne speare uut misteltak. Terwyl as de guden skik hebbet med Balder en em bekoagelet med swåre steynder ümdat hee toch unstarvelik is, düt Loki de speare in de handen van [[Höder]], Balder synen blinden bröder. Sou vermoardet Höder syn eygenen bröder. Wodan, den as wraak wil, verkrachtet dårup de [[asynja]] [[Rinda]], dee as ne söäne [[Váli]] krigt. Váli sal uuteandelik de doud van Balder wreaken en [[Höder]] douddoon.
 
-[[Denemarken|Däänske]] brunnen uut de 12. eywe, sou as van [[Saxo Grammaticus]] en andere däänske geskedenisskryvers hebbet en vermenskelikt verhaal van Balder daleskreaven. In beide de dicht- en verhaal[[edda]] ståt verwysingen når Balder syn doud as nen grouten tragedy vöär de [[Æsir]] en den veroorsaker van [[Ragnarök]].
+[[Denemarken|Däänske]] brunnen uut de 12. eywe, sou as van [[Saxo Grammaticus]] en andere däänske geskedenisskryvers, hebbet en vermenskelikt verhaal van Balder daleskreaven. In beide de dicht- en verhaal[[edda]] ståt verwysingen når Balder syn doud as nen grouten tragedy vöär de [[Æsir]] en den veroorsaker van [[Ragnarök]].
 
-Volgens [[Gylfaginning]], eyn book van [[Snorri Sturluson]] syn verhaaledda is [[Nanna]] de vrouwe van Balder en [[Forseti]] öären söäne. Balder syn skip [[Hringhorni]] is et beste wat der ooit ebouwd is en der is ginne halle mööier as syn [[Breidablik]].
+Volgens [[Gylfaginning]], eyn book van [[Snorri Sturluson]] in syne verhaaledda, is [[Nanna]] de vrouwe van Balder en [[Forseti]] öären söäne. Balder syn skip [[Hringhorni]] is et beste wat der ooit ebouwd is en der is ginne halle mööier as syn [[Breidablik]].
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Germaanse mythologie]]
