--- a/Grunnen_(provìnzie).mw
+++ b/Grunnen_(provìnzie).mw
@@ -1,7 +1,7 @@
 {{Etelazie}} {{Portaol|Portoal:Grunnen|Portoal:Grunnen}}
 {{Provinzietabel
 | noam = Provìnzie Grunnen
-| vlageofbeelden = [[Bestaand:Flag Groningen.png|125px|Provinzievlage]]
+| vlageofbeelden = [[Bestaand:Flag Groningen.png|125px|border|Provinzievlage]]
 | woapenofbeelden = [[Bestaand:Groningen (province) coa.svg|130px|Provinziewoapen]]
 | körtnoam = Grunnen
 | heufdstad = [[Grunnen (stad)|Grunnen]]
@@ -28,7 +28,6 @@ Grunnen grìnst in t noorden aan de [[Waddenzee]], in t noordoosten aan  inhamme
 
 Bie  provìnzie heuren drij leutje [[Waddenaailanden]]: [[Röttemeroog|t Oog]], [[Röttemerploat|De Ploat]] en [[Zuderdunen]]. Aal drije binnen onbewoond deur mìnzen, môr binnen n parredies veur vogels en zeehonden. Noar dizze Waddenaailanden worden joarleks n aantal moalen [[wadlopen|wadlooptochten]] organiseerd.
 
-<div style="text-align: justify">
 == Algemain ==
 Provìnzie wordt ook wel ''Stad en [[Ommelanden]]'' nuimd, omdat ien vrouger tied  [[Grunnen (stad)|Stad]] (oorspronkelk [[Nedersaksisch|Saksisch]]) en t omliggend plattelaand (oorspronkelk [[Freeske taaln|Frais]]) laange tied in onmin leefd hebben. De drij historische Ommelanden binnen [[Hunzego]], [[Fivelgo]] en t [[Westerkertaaier]]. De [[Ommelanden]] en t [[Oldambt (streek)|Oldambt]] waren tot [[15e eeuw|15e aiw]] grotendails Fraistoaleg. De Stad, t [[Gerecht (streek)|Gorecht]] en [[Westerwoolde (streek)|Westerwolde]] waren Leegsaksisch. Nou wordt sikkom overaal in Ommelanden [[Nedersaksisch|Leegsaksische]] [[dialekt]]en proat. Allend in  dörpen [[Moarem]], [[De Wilp]] en [[De Penne (Grönnen)|De Penne]] in t Westerkertaaier wordt nog [[Westlaauwers Frais|Frais]] proat.
 
@@ -132,7 +131,7 @@ t Kultureel aarfgoud en aander zainsweerdegheden as t Naasjonoalpaark [[Laauwers
 <li> [[Grunnen (gemainte)|Stad]]  (''Groningen (stad)'')  
 <li> [[Veendaam (gemainte)|Veendaam]]  (''Veendam'')  
 <li> [[Westerkertier (gemainte)|Westerkertier]]  (''Westerkwartier'')  
-<li> [[Westerwoolde (gemainte)|Westerwoolde]]  (''Westerwolde'')  
+<li> [[Westerwoolde (gemainte)|Westerwoolde]]  (''Westerwolde'')</ol>
 |
 |}
 
