--- a/Stellingwarver_taelwiezer.mw
+++ b/Stellingwarver_taelwiezer.mw
@@ -588,7 +588,7 @@ Ok typisch Stellingwarfs is et gebruuk van 'ae' (langrekte èè) in plak van 'aa
 {| class="wikitable"
 !colspan="16"|'''Overienkomsten mit et Veluws/Sallaans'''
 |-
-|'''[[West-Veluws]]'''&nbsp;||'''[[Oost-Veluws]]/[[Sallaands|Sallaans]]'''''&nbsp;||'''Stellingwarfs'''
+|'''[[West-Veluws]]'''&nbsp;||'''[[Oost-Veluws]]/[[Sallaands|Sallaans]]'''&nbsp;||'''Stellingwarfs'''
 |-
 |taal||tääl||tael
 |-
@@ -608,7 +608,7 @@ Friese woorties die vaeke/daegeliks in et Stellingwarfs wodden bin:
 {| class="wikitable"
 !colspan="16"|'''Overienkomsten tussen et Stellingwarfs en et Fries'''
 |-
-|'''[[Westlaauwers Frais|Fries]]'''&nbsp;||'''Stellingwarfs'''''&nbsp;||'''[[Nederlaans]]'''
+|'''[[Westlaauwers Frais|Fries]]'''&nbsp;||'''Stellingwarfs'''&nbsp;||'''[[Nederlaans]]'''
 |-
 |likegoed||liekegoed||evengoed, zowel
 |-
@@ -816,34 +816,34 @@ Friese woorties die vaeke/daegeliks in et Stellingwarfs wodden bin:
 |Zie waren nog mor nauweliks vertrokken<br />''(skoen = mv; skoe = ev)''
 |-
 |'''gat an de haoken, mit et'''<br />''Dat aarme maegien zit mit et gat an de haoken''
-|In de putte zitten, depressief wezen''
+|In de putte zitten, depressief wezen
 |-
 |'''helderweg''' <br />''De kollekte hef nog helderweg wat opeleverd''
-|Aordig wat, hiel wat''
+|Aordig wat, hiel wat
 |-
 |de '''keel''' ofbieten<br />''Et zich d'r zo lekker uut, et bit mi'j de keel of''
-|Et liekt mi'j alderbassens lekker''
+|Et liekt mi'j alderbassens lekker
 |-
 |'''ommelopen'''<br />''Et lop mi'j omme''
-|Te vule wodden (Et wodt mi'j te vule)''
+|Te vule wodden (Et wodt mi'j te vule)
 |-
 |'''perceel: van - wezen'''<br />''Zie bin hielemoale van perceel''
-|In de warre wezen''
+|In de warre wezen
 |-
 |'''schoon an de latten'''<br />''Nao een dag waarken bin ik schoon an de latten''
-|Uutgeput wezen''
+|Uutgeput wezen
 |-
 |Die '''stee''' is ok weer zacht
-|Dat is ok weer opehelderd''
+|Dat is ok weer opehelderd
 |-
 |argens '''teugenof raeken''': Aj d'r te vule van eten, '''raek''' ie d'r '''teugen of'''
-|Erveren dat wat joe teugen gaot staon (Aj d'r te vule van eten, gaot et joe teugenstaon)''
+|Erveren dat wat joe teugen gaot staon (Aj d'r te vule van eten, gaot et joe teugenstaon)
 |-
 |'''verbraomen''' (wederkerend warkwoord)<br />''Hi'j verbroamt d'r hom niet van''
-|Joe niet schaemen, wat schaemteloos doen''
+|Joe niet schaemen, wat schaemteloos doen
 |-
 |'''verspikken''' (wederkerend warkwoord)<br />''Ik verspikke mi'j d'r now al op''
-|Argens slim naor uutkieken, zin an hebben''
+|Argens slim naor uutkieken, zin an hebben
 |}
 
 == Zie ok ==
