--- a/Urkers.mw
+++ b/Urkers.mw
@@ -110,7 +110,6 @@ In ieuwigeid
 Amen
 </poem>
 
-'''
 ==Veraol: "De pas van Klaos"==
 't Veraol wat ik jelui nou wil doen is echt gebeurd en voend allef in de jaoren tachtig van de vurige ieuw plaos. Wai visten zoas gewoen in de zoemermoonden om de noord en avenden daoromme in Ansolm, ielemaol in 't noorden van Denemarken. We wazzen viertien dagen van eus in daornao un lang weekend op Urk. Vor iene die net etrouwd is gien pretjen, mar 't wierzien was dan ok apart fain, mar dat effien terzede. Suundes saves om twaolf uur sting 't bussien wier te toeten vor de duur en mozzen we de barre reaze wier anvaorden nor boord, een rit van een uur of niegene, tiene. Ik voer toen mit een vraigezel, die om 't zo mar te zeggen, graag een bietjen luste. Nou is dat gien ramp want dat lusten de mieste minsen die ik kin wel. Varder was er niks op Klaos an te marken, ai woende bai zun ouwe mimme en zörgde goed vor 't ouwe mins. Mar op een keer was Klaos arges bleven plakken, in, je begrepen 't wel, 't was un bietjen laoter dan normaol eworren. Om veef vor twaoleven was ie er bientjen over in koemen zealen in ad gaauw z'n spulletjes bai eenkanger egriepen vordat 't bussien kwam.
 
@@ -122,8 +121,8 @@ Klaos ding een greep in 't kässien om z'n paspoort te pakken in gelik worde er 
 ==Referenties==
 <div class="references-small">
 <references/>
+*Hans Derks, Deutsche Westforschung. Ideologie und Praxis im 20. Jahrhundert (Leipzig : Akademische Verlagsanstalt, 2001), p. 178 - 187.
 </div>
-Hans Derks, Deutsche Westforschung. Ideologie und Praxis im 20.Jahrhundert (Leipzig : Akademische Verlagsanstalt, 2001), p. 178 - 187.
 
 ==Urkers op 't web==
 * [http://dialectkring.opurk.nl Dialectkring op Urk]
