Sortering van [[:Kategorie:Germaanse mythologie]] anpasd naor "" ([[Wikipedia:HotCat|HotCat.js]])

--- a/Alven.mw
+++ b/Alven.mw
@@ -17,4 +17,4 @@ De disse tydse wearümme-beleaving van de noordske religy din sich med de wanen 
 {{Dialekt|sdz|[[Vechte|'t Vechtdal]]|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Noordse mythologie]]
-[[Kategorie:Germaanse mythologie| ]]
+[[Kategorie:Germaanse mythologie]]
