/* Balders doud en grove */

--- a/Balder.mw
+++ b/Balder.mw
@@ -7,9 +7,9 @@ In de dichtedda's wördt Balder syn doud neet rechtstreyks beskreaven, mär når
 
 Balder syn moder, Frigg, krigt sou vöäle skrik van de vöärspelling van Balders doud dat se alle dinge en leavende weasens in et land löt beloaven dat se Balder niks sölt doon. Se vergeat enkel de misteltak te vrågen, want den acht see neet belangryk genog (en alternative verklåring is hyr dat et der up wist dat junge kinder noch neet ansprakelik wordet eholden vöär emakede afspraken en eswöärene beloavdes, mär dat dee vanselv en mål upgroiet en sik der dan neet an hoovt te holden). Dår krigt stoakegud [[Loki]] lucht van en den maket sik ne speare uut misteltak. Terwyl as de guden skik hebbet med Balder en em bekoagelet med swåre steynder en andere vöärwarpen ümdat hee toch unstarvelik is, düt Loki de speare in de handen van [[Höder]], Balder synen blinden bröder. Sou vermoardet Höder syn eygenen bröder. Wodan, den as wraak wil, geyt weader by nen wårsegster an üm  te höyren wo as hee Loki et beste kan anvatten. Den verwist em når de [[åsinne]] [[Rinda]], mär see wil neet med em küren. Hee vergiftigt öär med magiske runen en düt sik dårnå vöär as heylmeisteresse under den name ''Wecha''. Hee segt dat hee wal ne küre hevt, mär dat den wal ne flink swåre uutwarking sal hebben. Hee verkrachtet dårup Rinda, dee as neet vöäle later ne söäne [[Váli]] krigt. Váli sal uuteandelik de doud van Balder wreaken en [[Höder]] douddoon. 
 
-Balder wördt uutleided in syn skip [[hringhorni]], et beste skip ooit. Et skip wördt ritueel in brand estöäken döär Donar, den as et löt lüchten en dunderen med synen hamer. Den dwarg [[Litr]] löpt em vöär de vöte en uut argernis sküppet hee em by up de brandstapel. Ouk Nanna, Balder syne vrouwe, löt sik up et vüür vallen üm uuteyndelik by Ragnarök weader by Balder te weasen. Ouk Balder syn paerd wördt verbrand.De röäsinne [[Hyrrokin]] kümt anjagen up nen wulv. See gevt et skip sou nen duw dat et vüür van de rullebalkens sküt en de aerde der van beavet.
+Balder wördt uutleided in syn skip [[hringhorni]], et beste skip ooit. Et skip wördt ritueel in brand estöäken döär Donar, den as et löt lüchten en dunderen med synen hamer. Den dwarg [[Litr]] löpt em underwyl voordan vöär de vöte en uut argernis sküppet hee em by up de brandstapel. Ouk Nanna, Balder syne vrouwe, löt sik up et vüür vallen üm uuteyndelik by Ragnarök weader by Balder te weasen. Balder syn paerd wördt ouk med verbrand. De röäsinne [[Hyrrokin]] kümt anjagen up nen wulv. See gevt et skip sou nen duw dat et vüür van de rullebalkens sküt en de aerde der van beavet.
 
-Vul verdreet stüürt moder Frigg den boadskapper [[Hermod]] når [[Hel]]. Den beloavet Balder uut de underwearld te låten as alle leavende en doude objekten vöär Balder sölt tröären. Dat doot se allemåle, up eyne nå. De röäsinne [[þökk]] (vake der van verdacht [[Loki]] in vermumming te weasen) düt der neet an med. Balder müt in de underwearld blyven en kümt der pas med Ragnarök weader uut, wårnå hee wördt vereynigd med syn bröder Höder en tehoupe med Donar syne söäns de nye aerde sal regeyren.
+Vul verdreet stüürt moder Frigg den boadskapper [[Hermod]] når [[Hel]], de heyresse van [[neavelheym]], de underwearld. Den beloavet Balder uut de underwearld te låten as alle leavende en doude objekten vöär Balder sölt tröären. Dat doot se allemåle, up eyne nå. De röäsinne [[þökk]] (vake der van verdacht [[Loki]] in vermumming te weasen) düt der neet an med. Balder müt in de underwearld blyven en kümt der pas med Ragnarök weader uut, wårnå hee wördt vereynigd med syn bröder Höder en tehoupe med Donar syne söäns de nye aerde sal regeyren.
 
 ==Brunnen==
 [[Denemarken|Däänske]] brunnen uut de 12. eywe, sou as van [[Saxo Grammaticus]] en andere däänske geskedenisskryvers, hebbet en vermenskelikt verhaal van Balder daleskreaven. In beide de dicht- en verhaal[[edda]] ståt verwysingen når Balder syn doud as nen grouten tragedy vöär de [[Æsir]] en den veroorsaker van [[Ragnarök]].
