--- a/Roermond.mw
+++ b/Roermond.mw
@@ -1,22 +1,22 @@
-{{Gemeante |
-naam = Roermond |
-bestaandsnaam vlagge = Roermond vlag.svg |
-bestaandsnaam woapn = Coat of arms of Roermond.svg |
-lokatie = LocatieRoermond |
-proveensie = [[Limburg (Nederlaand)|Limburg]] |
-heufdplaats = '''Roermond''' |
-öppervlakte = 46,87|
-öppervlakte laand = - |
-öppervlakte water = - |
-inwonners = 54398 |
-doatum inwonners = 2008 |
-dichtheid = 1161 |
-breedtegroad = 51/12/0/N |
-lengtegroad = 6/0/0/E |
-verkeersoader = - |
-netnummer = 6176, 6190-6199 |
-postkode = 5941-5943 |
-webstie = [http://www.gemeentebeek.nl/ www.gemeentebeek.nl] |
+{{Gemeante
+| naam = Roermond
+| bestaandsnaam vlagge = Roermond vlag.svg
+| bestaandsnaam woapn = Coat of arms of Roermond.svg
+| lokatie = LocatieRoermond
+| proveensie = [[Limburg (Nederlaand)|Limburg]]
+| heufdplaats = '''Roermond'''
+| öppervlakte = 46,87
+| öppervlakte laand = -
+| öppervlakte water = -
+| inwonners = 54398
+| doatum inwonners = 2008
+| dichtheid = 1161
+| breedtegroad = 51/12/0/N
+| lengtegroad = 6/0/0/E
+| verkeersoader = -
+| netnummer = 6176, 6190-6199
+| postkode = 5941-5943
+| webstie = [http://www.gemeentebeek.nl/ www.gemeentebeek.nl]
 }}
 [[Ofbeelding:Rur Roermond.jpg|thumb|left|Roermond]]
 '''Roermond''' ([[Limburgs]]: ''Remunj'' of ''Remuunj'') is ne [[gemiente (bestuur)|gemeente]] en ne [[Stad (woonstee)|stad]] in de [[Nederland]]sen previnsie [[Limburg (Nederlaand)|Limburg]]. Op [[31 juli]] 2008 had de gemeente 54.508 inwonners (bron: CBS). De stad ligt an de samenvleujing van den [[Roer (rivier)|Roer]] in den [[Maas]] en hef n riek verleaden. Zi-j was in de late middeleeuwn ne [[hanzestad]], en ene van de veer heufdsteden van et olde Hartogdom [[Gelre]], tweeden in umvang en grootsten op handelsgebeed.
@@ -47,7 +47,7 @@ In beide tabellen ku-j et gevolg van de samenveuging van Roermond en Swalmen van
 |-style="background: #efefef"
 | Greuj/ofname || align=center| || align=center|   
 |-
-| colspan=10 align=center| <small>* Swalmen neet bi-j Roermond<br />[http://statline.cbs.nl/StatWeb/table.asp?TT=2&LA=nl&DM=SLNL&PA=70904ned&D1=9&D2=11865-11897,15619-15626&D3=a,!0-2 CBS 2006 en 2007]
+| colspan=10 align=center| <small>* Swalmen neet bi-j Roermond<br />[http://statline.cbs.nl/StatWeb/table.asp?TT=2&LA=nl&DM=SLNL&PA=70904ned&D1=9&D2=11865-11897,15619-15626&D3=a,!0-2 CBS 2006 en 2007]</small>
 |}
 
 {| class="wikitable" style="float:left; margin-right:2em;"
@@ -76,7 +76,7 @@ In beide tabellen ku-j et gevolg van de samenveuging van Roermond en Swalmen van
 |-
 |[[2008]]|| align=center|54.398 ||align=center| + 150 
 |-
-| colspan=3 align=center| <small>Bron: [http://statline.cbs.nl/StatWeb/table.asp?TT=2&LA=nl&DM=SLNL&PA=37259ned&D1=0&D2=813&D3=0&D4=a,!0-37 CBS1998-2007] [http://statline.cbs.nl/StatWeb/table.asp?TT=2&LA=nl&DM=SLNL&PA=37230ned&D1=0&D2=466&D3=l CBS 2008]
+| colspan=3 align=center| <small>Bron: [http://statline.cbs.nl/StatWeb/table.asp?TT=2&LA=nl&DM=SLNL&PA=37259ned&D1=0&D2=813&D3=0&D4=a,!0-37 CBS1998-2007] [http://statline.cbs.nl/StatWeb/table.asp?TT=2&LA=nl&DM=SLNL&PA=37230ned&D1=0&D2=466&D3=l CBS 2008]</small>
 |}
 
 {{Limburg}}
