--- a/Frigg.mw
+++ b/Frigg.mw
@@ -1,6 +1,6 @@
 '''Frigg''' is ne gudinne uut de [[germaanse mythologie|germaanske mytology]]. See is in de meyste verhalen de vrouwe van [[Woden]] en de moder van [[Donar]], [[Balder]] en [[Höder]]. See is de gudinne van vöäruutsicht en wysheid en woanet in de sumpige laeglandhallen van [[Fensalir]]. In et oldhougdüütsk heat see ''Frīja'', in langobardisk ''Frēa'', in oldengelsk ''Frīg'', in oldfreesk ''Frīa'', en in oldsassisk ''Frī'', wat uuteandelik allemåle afstamt van et protogermaanske *'Frijjō, wat 'de geleevde' of 'de vrye' bedüdet. Wo as see sik töt [[Freya]] verhöldet en of de beide feitelik eyn en deselvde sint, sint de geleyrden et noch neet oaver eyns.
 
-{{knöpken}}
+{{begin|act}}
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Germaanse mythologie]]
