--- a/Tubbige.mw
+++ b/Tubbige.mw
@@ -88,7 +88,7 @@ Antal inwonners per woonkern op [[1 jannewaori|1 januari]] [[2004]]:
 
 '''Gemeentebestuur'''
 
-*Börgermeister: [[Mervyn Stegers|M.K.M. (Mervyn) Stegers]] (CDA)
+*Börgermeister: Wilmien Haverkamp-Wenker 
 *Wethoalder:    P.J. (Pieter) van der Vinne (CDA)
 *Wethoalder:    H.B.M. (Henny) Oude Geerdink (CDA)
 *Wethoalder:    J.E.F. (Jos) Harmelink (PvdA)
