--- a/Riessens.mw
+++ b/Riessens.mw
@@ -37,7 +37,7 @@ Doarnöast gebrok Riessens ne [[brekking (taal)|klaankbrökke]]: de -ee, -oo en 
 
 In heel wat Riessense wöarde is de Westfaalse klaankbrökke vort, mer zörget der nog aait vuur at oorsproonkelike open-kleenkerwöarde met nen korten kleenker wordt oet esprökken. In völle Noord-Nedersassiese dialekte bestoat bievuurbeeld de wöarde ''beter'' en ''ketel'' ({{IPA|/beɪtəɾ, keɪtəl/}}). In Westfalen sprekt ze dit oet as ''biäter'' en ''kiätel'' ({{IPA|/bɪætəɾ, kɪætəl/}}). Et [[Vjens]]e ''bjetter'' en ''kjettel'' zeent hier oawerbliefsels van en maakt et annemmelik at et in Riessen ooit ook zo ekleunken mut hebben. Toch is et Riessens dee anvaankelike j-klaank kwiet, terwiel as de ä oawerblif. Doarumme kuiert vuural de euldere leu nog van ''bätter'' en ''kättel''. De jungere geslachten zegnt rechtevoort ''better'' en ''kettel'', as in de rest van Tweante en [[Sallaand]].
 
-Een aander belangriek kenmoark wat vuural nog bie euldere Riessenders is te heuren, is de oetsproake van nen korten -a as -ä (IPA: {{IPA|/æ/}}. Dissen klaank kleenkt etzelfde as in et Engelse "trap", nen soort korten -aa. Samen met de earder neumde (oawerbliefsels van de) klaankbrökke, kan et volgende vuurbeeldzinneke vuur aandere Tukkers vrömd of zelfs onverstoanboar wean: ''Hee har nog gin half uur an de bar ezetten, of hee was alwier zo dikke as ne koo" (''hee hä nog gin half uur an de bär ezètn, of hee wès èwier zo dikke ès ne koo'').
+Een aander belangriek kenmoark wat vuural nog bie euldere Riessenders is te heuren, is de oetsproake van nen korten -a as -ä (IPA: {{IPA|/æ/}}. Dissen klaank kleenkt etzelfde as in et Engelse "trap", nen soort korten -aa. Samen met de earder neumde (oawerbliefsels van de) klaankbrökke, kan et volgende vuurbeeldzinneke vuur aandere Tukkers vrömd of zelfs onverstoanboar wean: ''Hee har nog gin half uur an de bar ezetten, of hee was alwier zo dikke as ne koo'' (''hee hä nog gin half uur an de bär ezètn, of hee wès èwier zo dikke ès ne koo'').
 
 ====Eankele klaanken====
 Et Riessens hef völle verskillende [[eankelklaank]]en (onverdreeide kleenkers). Een antal doarvan wörd mangs ook nog länger oet esprökken, ofhaankelik van et woard. Vanzelfs hebbt aandere soorten Tweants een groot antal van de hieroonder stoande klaanken ook.
