--- a/Oaveriessel.mw
+++ b/Oaveriessel.mw
@@ -82,6 +82,7 @@ Oetslag in Oaveriessel van de verkiezingen voor de Proveensiale Staatn van meert
 |''Opkomst''||ALIGN="right"|''51,7''||ALIGN="right"|''63''||ALIGN="right"|''49,9''||ALIGN="right"|''47''||ALIGN="right"|''57,7''||ALIGN="right"|''47''||ALIGN="right"|''49,8''||ALIGN="right"|''47''
 |-
 |}
+<div style="clear:both;"></div>
 
 === Gedeputeerde Staatn ===
 t Dagelikse bestuur is t kollege van Gedeputeerde Staatn. De proveensie Oaveriessel hef 5 gedeputeerdn. De regering van t laand hef [[Andries Heidema]] ([[CU]]) as [[Commisaris van de Koningin|Kommissoaris van de Könning]] ansteld.
