--- a/Europeesk_handväst_vöär_streaktalen_of_minderheidstalen.mw
+++ b/Europeesk_handväst_vöär_streaktalen_of_minderheidstalen.mw
@@ -98,7 +98,7 @@ De stand van de bekrachtiging en underteykening up 1 januari 2011 (bron:<ref>[ht
 |- style="background-color:#ffaaaa;"
 | [[Ofbeelding:Flag_of_Portugal.svg|20px|left|Portugal]] [[Portugal]] || &nbsp; || &nbsp; || &nbsp; || &nbsp;
 |- style="background-color:#aaffaa;"
-| [[Ofbeelding:Flag_of_Romania.svg|20px|left|Rumänie]] [[Roemenië|Rumänie]] || 17-07-1995 || 29-01-2008 || 01-05-2008 || ''albaneesk'', ''armeensk'', bülgaarsk, düütsk, ''gryksk'', hungaarsk, ''italiaansk'', ''jiddisj'', kroatisk, ''macedonisk'', ''poolsk'', ''romani'', russisk, ''ruteensk'', servisk, slowaaksk, tataarsk'', tsjechisk, türksk, ukrainsk
+| [[Ofbeelding:Flag_of_Romania.svg|20px|left|Rumänie]] [[Roemenië|Rumänie]] || 17-07-1995 || 29-01-2008 || 01-05-2008 || ''albaneesk'', ''armeensk'', bülgaarsk, düütsk, ''gryksk'', hungaarsk, ''italiaansk'', ''jiddisj'', kroatisk, ''macedonisk'', ''poolsk'', ''romani'', russisk, ''ruteensk'', servisk, slowaaksk, tataarsk, tsjechisk, türksk, ukrainsk
 |- style="background-color:#ffffaa;"
 | [[Ofbeelding:Flag_of_Russia.svg|20px|left|Rusland]] [[Ruslaand|Rusland]] || 10-05-2001 || &nbsp; || &nbsp; || &nbsp;
 |- style="background-color:#ffaaaa;"
