*Empty MediaWiki Message*

--- a/Duuts.mw
+++ b/Duuts.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Duits.jpg|thumb|Et Duutse taelgebied]]
+[[Bestaand:Duits.jpg|thumb|Et (Neder)Duutse taelgebied]]
 '''Duuts''' (in et Hoogduuts: ''Deutsch'') is een [[West-Germoanse toalen|West-Germaonse tael]] die praot wodt in [[Duutslaand]], [[Oostnriek|Oostenriek]], [[Zwitserlaand]], [[Liechtenstein]], [[Luxemburg (laand)|Luxemburg]], [[België]], [[Italiën|Italië]] en inkelde aandere kontreinen. Et Duuts het omdebi'j 105 miljoen memmetaelsprekers en is ok iene van de belangriekste taelen van Europa tegere mit et [[Fraans]] en et [[Ingels]]. 
 
 == Klassifikaosie ==
