--- a/Wilhelmine_Siefkes.mw
+++ b/Wilhelmine_Siefkes.mw
@@ -41,7 +41,7 @@ Heur anoniem inestuurde roman-manuscript ''Keerlke'' kreeg in 1940 de [[Fehrs-Pr
 ==Aover Wilhelmine Siefkes==
 * Heide Braukmüller (1996), ''Wilhelmine Siefkes. Über ihr Leben und ihre Arbeit'', Leer. ISBN 3-927139-25-4
 * Erhard Brüchert (1993), 'Wilhelmine Siefkes (1890–1984)', in: Angela Dinghaus (uutg.): ''Frauenwelten. Biographisch-historische Skizzen aus Niedersachsen'', Hilmessen-Zürich-New York, blz. 356–361
-* Heinold Fast'' (1975), '... und du bist's auch nicht. Wilhelmine Siefkes oder: ein Beitrag zum Volkstrauertag und zum Ewigkeitssonntag', in: ''Mennonitische Blätter'', Hambörg
+* Heinold Fast (1975), '... und du bist's auch nicht. Wilhelmine Siefkes oder: ein Beitrag zum Volkstrauertag und zum Ewigkeitssonntag', in: ''Mennonitische Blätter'', Hambörg
 
 {{Dia|Dit artikel is eschreven in 't [[Zuudwest-Drèents]].}}
 
